--- a/configure.ac
+++ b/configure.ac
@@ -56,7 +56,7 @@ AC_DEFUN([AC_HEADER_STDCXX_INTTYPES], [
 ])
 AC_HEADER_STDCXX_INTTYPES
 
-AC_SUBST(CXXFLAGS)
+#AC_SUBST(CXXFLAGS)
 AC_CONFIG_HEADERS([src/config.h])
-AC_CONFIG_FILES([src/Makevars])
+#AC_CONFIG_FILES([src/Makevars])
 AC_OUTPUT
